VDR Plugin 'imonlcd' Revision History
-------------------------------------

2010-08-18
- update italian translation provided by Diego Pierotto (Feature #406)

2010-04-22: Version 0.0.4
- Allow setup font size
- Show current time, on dual line mode (Request #316)

2010-04-18: Version 0.0.3
- Remove unnecessary include statement (suggest by Anssi Hannula)
- Add mode to show information on two lines provided by Sven (cokker) (Feature #161)

2009-06-08: Version 0.0.2
- italian translation provided by Diego Pierotto (Feature #126)
- new svdrp commands
  * 'ICON' - force state of icon. 
  * 'ON','OFF' - enable/disable display (Request #128)
- new options on exit
  * Show next timer (Feature #124)
  * set timer as wakeup time and showing clock.
- render current OSD state (menu/message)
- add workaround for a older libfreetype bug

2009-05-19: Version 0.0.1

- Initial revision.
